--- a/client/index.html
+++ b/client/index.html
@@ -1,103 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="icon" href="resources/favicon.ico" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./libs/element-ui.css">
-        <link rel="stylesheet" href="index.css">
-        <title></title>
-    </head>
-    <body>
-        <section id="app">
-            <!-- 页头 -->
-            <header class="center vertical">
-                <section class="center between">
-                    <!-- <img src="resources/favicon.ico" /> -->
-                    <h1>{{title}}</h1>
-                    <el-menu default-active="homepage" mode="horizontal" @select="changePage" background-color="whitesmoke"
-                        text-color="black" active-text-color="steelblue">
-                        <el-menu-item index="homepage">主页</el-menu-item>
-                        <el-submenu index="2">
-                            <template slot="title">产品中心</template>
-                            <el-submenu index="2-1">
-                                <template slot="title">C1</template>
-                                <el-menu-item index="C11">C11</el-menu-item>
-                                <el-menu-item index="C12">C12</el-menu-item>
-                                <el-menu-item index="C13">C13</el-menu-item>
-                                <el-menu-item index="C14">C14</el-menu-item>
-                            </el-submenu>
-                            <el-menu-item index="C2">C2</el-menu-item>
-                            <el-menu-item index="C3">C3</el-menu-item>
-                            <el-menu-item index="C4">C4</el-menu-item>
-                            <el-menu-item index="C5">C5</el-menu-item>
-                        </el-submenu>
-                        <el-menu-item index="contactus">联系我们</el-menu-item>
-                    </el-menu>
-                </section>
-            </header>
-            <!-- 主体 -->
-            <main>
-                <el-row>
-                    <el-col :span="4">
-                        <el-menu default-active="2" class="menu" @select="changePage" 
-                        background-color="#545c64" text-color="#fff" active-text-color="#ffd04b">
-                            <el-submenu index="1">
-                                <template slot="title">
-                                    <i class="el-icon-location"></i>
-                                    <span>C1</span>
-                                </template>
-                                <el-menu-item-group title="分组1">
-                                    <el-menu-item index="C11">C11</el-menu-item>
-                                    <el-menu-item index="C12">C12</el-menu-item>
-                                </el-menu-item-group>
-                                <el-menu-item-group title="分组2">
-                                    <el-menu-item index="C13">C13</el-menu-item>
-                                </el-menu-item-group>
-                                <el-submenu index="1-4">
-                                    <template slot="title">Other</template>
-                                    <el-menu-item index="C14">C14</el-menu-item>
-                                </el-submenu>
-                            </el-submenu>
-                            <el-menu-item index="C2">
-                                <i class="el-icon-menu"></i>
-                                <span slot="title">C2</span>
-                            </el-menu-item>
-                            <el-menu-item index="C3">
-                                <i class="el-icon-document"></i>
-                                <span slot="title">C3</span>
-                            </el-menu-item>
-                            <el-menu-item index="C4">
-                                <i class="el-icon-setting"></i>
-                                <span slot="title">C4</span>
-                            </el-menu-item>
-                            <el-menu-item index="C5">
-                                <i class="el-icon-menu"></i>
-                                <span slot="title">C5</span>
-                            </el-menu-item>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="resources/favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./libs/element-ui.css">
+    <link rel="stylesheet" href="index.css">
+    <title></title>
+</head>
+
+<body>
+    <section id="app">
+        <el-row>
+            <!-- 1 左侧边栏 -->
+            <el-col :md="5" :sm="6">
+                <el-menu default-active="homePage" default-openeds="['visualization','support']" class="left-menu"
+                    @select="changePage" background-color="#545c64" text-color="#fff" active-text-color="#ffd04b">
+                    <el-menu-item index="homePage">
+                        <i class="el-icon-s-home"></i>
+                        <span slot="title">主页</span>
+                    </el-menu-item>
+                    <el-submenu index="visualization">
+                        <template slot="title">
+                            <i class="el-icon-data-analysis"></i>
+                            <span>数据可视化</span>
+                        </template>
+                        <el-menu-item-group title="实时数据">
+                            <el-menu-item index="realtime-line-chart">折线图</el-menu-item>
+                            <el-menu-item index="realtime-hist-chart">直方图</el-menu-item>
+                        </el-menu-item-group>
+                        <el-menu-item-group title="历史数据">
+                            <el-menu-item index="history-line-chart">折线图</el-menu-item>
+                            <el-menu-item index="history-hist-char">直方图</el-menu-item>
+                            <el-menu-item index="history-table">表格</el-menu-item>
+                        </el-menu-item-group>
+                    </el-submenu>
+                    <el-submenu index="support">
+                        <template slot="title">
+                            <i class="el-icon-setting"></i>
+                            <span>辅助功能</span>
+                        </template>
+                        <el-menu-item index="crud">增删查改</el-menu-item>
+                    </el-submenu>
+                </el-menu>
+            </el-col>
+            <!-- 2 主体 -->
+            <el-col :md="19" :sm="18">
+                <!-- 2.1 页头 -->
+                <header class="flex-center vertical">
+                    <section class="header-inner flex-center between">
+                        <h1>{{title}}</h1>
+                        <el-menu default-active="homepage" mode="horizontal" @select="changePage"
+                            background-color="#545c64" text-color="#fff" active-text-color="#ffd04b">
+                            <el-menu-item index="contactus">联系我们</el-menu-item>
                         </el-menu>
-                    </el-col>
-                    <el-col :span="20" class="center">
+                    </section>
+                </header>
+                <!-- 2.2 内容 -->
+                <main :style="mainPartStyle">
+                    <section class="main-inner">
                         <displaypage :msg="displayComponent"></displaypage>
                         <contactus :msg="displayComponent"></contactus>
                         <homepage :msg="displayComponent"></homepage>
-                    </el-col>
-                </el-row>
-            </main>
-            <!-- 页尾 -->
-            <footer class="center">
-                Astar @2022 Suzhou
-            </footer>
-            <el-backtop></el-backtop>
-        </section>
-        <script src="./libs/vue.js"></script>
-        <script src="./libs/axios.js"></script>
-        <script src="./libs/element-ui.js"></script>
-        <script src="./components/homePage.js"></script>
-        <script src="./components/displayPage.js"></script>
-        <script src="./components/contactus.js"></script>
-        <script src="./index.js" async="async"></script>
-    </body>
+                    </section>
+                </main>
+                <!-- 2.3 页尾 -->
+                <footer class="center flex-center">
+                    Astar @2022 Suzhou
+                </footer>
+                <el-backtop></el-backtop>
+            </el-col>
+        </el-row>
+    </section>
+    <script src="./libs/vue.js"></script>
+    <script src="./libs/axios.js"></script>
+    <script src="./libs/element-ui.js"></script>
+    <script src="./components/homePage.js"></script>
+    <script src="./components/displayPage.js"></script>
+    <script src="./components/contactus.js"></script>
+    <script src="./index.js" async="async"></script>
+</body>
 
 </html>
